fixed on mobile view

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -50,4 +50,7 @@
     margin-left: auto;
     width: 80%;
   }
+  .containerForm{
+    max-width: 100%;
+  }
 }
